--- a/src/app/blog/blog-detail/blog-detail.component.less
+++ b/src/app/blog/blog-detail/blog-detail.component.less
@@ -102,4 +102,13 @@
   }
 }
 
+video{
+  width: 100%;
+  margin-top: 3rem;
+
+  @media only screen and (max-width: 400px){
+    margin-bottom: 1rem;
+  }
+}
+
 
