--- a/src/app/blog/blog-detail/blog-comment/blog-comment.component.less
+++ b/src/app/blog/blog-detail/blog-comment/blog-comment.component.less
@@ -5,6 +5,14 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 3rem;
+
+  @media only screen and (max-width: 700px){
+    margin-top: 2rem;
+  }
+
+  @media only screen and (max-width: 400px){
+    margin-top: 1rem;
+  }
 }
 
 hr{
@@ -23,6 +31,7 @@ hr{
 
   @media only screen and (max-width: 700px){
     font-size: 24px;
+    margin-top: 2rem;
   }
 
   @media only screen and (max-width: 500px){
@@ -63,6 +72,10 @@ label{
 
   &:first-of-type{
     margin-top: 3rem;
+
+    @media only screen and (max-width: 700px){
+      margin-top: 2rem;
+    }
   }
 
   &:last-of-type{
