--- a/src/app/blog/blog-detail/blog-detail.component.html
+++ b/src/app/blog/blog-detail/blog-detail.component.html
@@ -16,8 +16,8 @@
       <button type="button" class="btn btn-primary edit-button">Blogeintrag editieren</button>
     </a>
   </div>
-  <video width="320" controls>
-    <source src="https://www.pexels.com/de-de/video/person-glas-gesichtslos-kuche-7551328/" type="video/mp4">
+  <video controls>
+    <source src="{{blog.video}}" type="video/mp4">
   </video>
 </div>
 <app-blog-comment (submitComment)="addNewComment($event)"></app-blog-comment>
